--- a/about-us.html
+++ b/about-us.html
@@ -149,6 +149,7 @@
 
     <script src="js/zoomable.js" defer></script>
     <script src="js/index.js" defer></script>
+    <script src="/js/navigation.js" defer></script>
 </body>
 
 </html>
