--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
     <script src="js/index.js" defer></script>
     <script src="/js/zoomable.js" defer></script>
+    <script src="/js/navigation.js" defer></script>
 </body>
 
 </html>
