--- a/certificates.html
+++ b/certificates.html
@@ -303,6 +303,7 @@
 
     <script src="js/zoomable.js" defer></script>
     <script src="js/certificates.js" defer></script>
+    <script src="/js/navigation.js" defer></script>
 </body>
 
 </html>
