--- a/kittens.html
+++ b/kittens.html
@@ -194,6 +194,7 @@
     </div>
 
     <script src="js/zoomable.js" defer></script>
+    <script src="/js/navigation.js" defer></script>
 </body>
 
 </html>
