--- a/about-us.html
+++ b/about-us.html
@@ -79,9 +79,9 @@
             </section>
         </div>
 
-        <div class="hero-cats-container" style="margin-bottom: 5rem;">
-            <section class="hero">
-                <div class="container" id="about-out-kittens-text">
+        <div class="hero-cats-container" style="margin-top: 0; margin-bottom: 5rem;">
+            <section class="hero" style="width: 50%;">
+                <div class="container" id="about-our-kittens-text">
                     <h1>About Our Kittens</h1>
                     <p>
                         <strong>We are interested in Quality, not Quantity,</strong> and we sharply differentiate ourselves from backyard breeders!
