--- a/cats.html
+++ b/cats.html
@@ -85,7 +85,7 @@
                         <div class="cat-card">
                             <div class="card-imgs">
                                 <div class="img-div">
-                                    <img src="media/cats/cats-page/krista1.jpg" alt="Krista Image 1" class="viewable-img">
+                                    <img src="media/cats/cats-page/krista1.jpeg" alt="Krista Image 1" class="viewable-img">
                                 </div>
                                 <div class="img-div">
                                     <img src="media/cats/cats-page/krista2.jpeg" alt="Krista Image 2" class="viewable-img">
