--- a/kittens.html
+++ b/kittens.html
@@ -47,72 +47,95 @@
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Our Kittens</h1>
-            <p>
-                We take great pride in our work because we care for our kittens with lots of love and give them the best possible start. Each of our queens gives birth to her kittens in our bedroom and for the first few weeks of their lives the kittens stay there to make sure they are all well and where mom feels comfortable in a calm environment. From the moment they are born we are around the kittens and mom 24/7. We handle all of them as much as possible, so they enjoy human contact and are socialised quickly from the start. We share photos and videos of the kittens’ progress on our social media, so that the new families feel bonded with their kittens, before our little fluffies rehome in their new lovely homes.
-                At 4-5 weeks of age we start to wean our kittens onto a balanced diet and we start litter training them. Most of the kittens are fully litter trained by the age of 6-8 weeks.
-                The kittens cannot be formally reserved until they are 6-8 weeks old, and we have made the decision on who would be staying with us.
-                <br>
-                Our Kittens are health checked twice and vaccinated by a vet at 9 and 12 weeks old.
-                At 3 months old, our kittens are completely ready to move in with their new mums and dads.
-                <br>
-                Our kittens are for indoor living only. We will not place our kitten in a home where they will be allowed to roam the streets. 
-                Safety is our top priority, and on the streets they can to be hit and killed by cars.
-                To reserve a kitten we require a non-refundable deposited of £300. We refund this deposit if we withdraw the kitten from sale.
-            </p>
+        <div class="hero-cats-container">
+            <section class="cats">
+                <div class="cats-wrapper">
+                    <img src="media/cats/kittens-page/kitten1.jpeg" alt="DianAvery Kitten" class="viewable-img">
+                </div>
+            </section>
 
-            <h2>Kittens for Sale</h2>
-            <p>
-                Please note that we do not breed for profit. We strictly adhere to all ethical breeding rules and strongly differentiate ourselves from backyard breeders. Our Queens give birth once a year so they have a chance to recover and enjoy the rest of the time.
-                The sale of our kittens is performed <strong>only</strong> from our house.
-                We have only purebred BSH from quality producers, they are tested for PKD, ALPS, pd-PRA, FeLV and FIV - CLEAN.
-                The photos of our Kings and Queens are presented on the site. 
-                <br>
-                Every kitten leaves our home with:
-                <br>
-                - Certificate 
-                <br>
-                - Pedigree 
-                <br>
-                - 5 weeks free insurance 
-                <br>
-                - Microchipped 
-                <br>
-                - Vet card & Medical history
-                <br>
-                - Fully vaccinated, including Leukemia 
-                <br>
-                - Flea & worming treatment 
-                <br>
-                - Kitten pack including food & toys. 
-                <br>
-                - Information leaflets and small brochures, as well as lifelong support with advice on the care and well-being of our kittens from their new parents.
-                <br>
-                We will give recommendations for the care of a BSH kitten!
-                <br>
-                We will be happy to advise you and answer all your questions. 
-                <br>
-                We are waiting for you in DianAvery 
-                
-            </p>
-        </section>
+            <section id="home" class="hero">
+                <h1>Our Kittens</h1>
+                <p>
+                    We take great pride in our work because we care for our kittens with lots of love and give them the best possible start. Each of our queens gives birth to her kittens in our bedroom and for the first few weeks of their lives the kittens stay there to make sure they are all well and where mom feels comfortable in a calm environment. From the moment they are born we are around the kittens and mom 24/7. We handle all of them as much as possible, so they enjoy human contact and are socialised quickly from the start. We share photos and videos of the kittens’ progress on our social media, so that the new families feel bonded with their kittens, before our little fluffies rehome in their new lovely homes.
+                    At 4-5 weeks of age we start to wean our kittens onto a balanced diet and we start litter training them. Most of the kittens are fully litter trained by the age of 6-8 weeks.
+                    The kittens cannot be formally reserved until they are 6-8 weeks old, and we have made the decision on who would be staying with us.
+                    <br>
+                    Our Kittens are health checked twice and vaccinated by a vet at 9 and 12 weeks old.
+                    At 3 months old, our kittens are completely ready to move in with their new mums and dads.
+                    <br>
+                    Our kittens are for indoor living only. We will not place our kitten in a home where they will be allowed to roam the streets. 
+                    Safety is our top priority, and on the streets they can to be hit and killed by cars.
+                    To reserve a kitten we require a non-refundable deposited of £300. We refund this deposit if we withdraw the kitten from sale.
+                </p>
+            </section>
+        </div>
+            
+        <div class="hero-cats-container" style="margin-top: 0; margin-bottom: 5rem;">
+            <section class="hero" style="width: 50%;">
+                <div class="container">
+                    <h2>Kittens for Sale</h2>
+                    <p>
+                        Please note that we do not breed for profit. We strictly adhere to all ethical breeding rules and strongly differentiate ourselves from backyard breeders. Our Queens give birth once a year so they have a chance to recover and enjoy the rest of the time.
+                        The sale of our kittens is performed <strong>only</strong> from our house.
+                        We have only purebred BSH from quality producers, they are tested for PKD, ALPS, pd-PRA, FeLV and FIV - CLEAN.
+                        The photos of our Kings and Queens are presented on the site. 
+                        <br>
+                        Every kitten leaves our home with:
+                        <br>
+                        - Certificate 
+                        <br>
+                        - Pedigree 
+                        <br>
+                        - 5 weeks free insurance 
+                        <br>
+                        - Microchipped 
+                        <br>
+                        - Vet card & Medical history
+                        <br>
+                        - Fully vaccinated, including Leukemia 
+                        <br>
+                        - Flea & worming treatment 
+                        <br>
+                        - Kitten pack including food & toys. 
+                        <br>
+                        - Information leaflets and small brochures, as well as lifelong support with advice on the care and well-being of our kittens from their new parents.
+                        <br>
+                        We will give recommendations for the care of a BSH kitten!
+                        <br>
+                        We will be happy to advise you and answer all your questions. 
+                        <br>
+                        We are waiting for you in DianAvery 
+                    </p>
+                </div>
+            </section>
 
-        <section class="section cats-content">
+            <section class="cats">
+                <div class="cats-wrapper">
+                    <img src="media/cats/kittens-page/kitten2.png" alt="Dianavery Kittens" class="viewable-img">
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <button id="scrollBtn">
+        <img src="media/white-favicon.png" alt="Cat Icon">
+    </button>
+
+    <div class="hero-cats-container" style="margin-top: 0; margin-bottom: 5rem;"></div>
+        <section class="section cats-content" id="scroll-button-destination">
             <div class="cats-categories">
                 <div class="category-section">
-                    <h2 class="section-title">Available Kittens</h2>
+                    <!--<h2 class="section-title">Available Kittens</h2>-->
                     <div class="cats-grid">
 
 
-                        <div class="cat-card">
-                            <div class="card-imgs">
-                                <img src="media/cats/kittens-page/kitten1.png" alt="Kitten Image: New Kitten" class="viewable-img" style="width: 40% !important;">
-                            </div>
-                            <div class="cat-info">
-                                <h3>No Available Kittens Currently!</h3>
+                        <div class="cat-card" style="max-height: 20vh; align-items: center;">
+                            <h2>NEW UPCOMING LITTER!</h2>
+                            <div class="cat-info" style="margin-top: 0;">
                                 <p class="cat-details">
-                                    Awaiting the next Litter - February 2026<br>
+                                    Born 16 February 2026<br>
+                                    More details soon!
                                 </p>
                             </div>
                         </div>
@@ -195,6 +218,7 @@
 
     <script src="js/zoomable.js" defer></script>
     <script src="/js/navigation.js" defer></script>
+    <script src="/js/kitten-scroll.js" defer></script>
 </body>
 
 </html>
